[package]
name = "juno"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8", features = [] }
serde_json = "1.0"
juno-macros = { path = "./juno-macros" }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
indoc = "2.0.6"

[workspace]
members = ['.', 'examples/basic', 'juno-macros']

[dev-dependencies]
