[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
juno = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
serde_json = "1.0"
